syntax = "proto3";

option csharp_namespace = "MicroService.GrpcA";

package greetA;

// The greeting service definition.
service GreeterA {
  // Sends a greeting
  rpc SayHello (HelloRequestA) returns (HelloReplyA);
}

// The request message containing the user's name.
message HelloRequestA {
  string name = 1;
}

// The response message containing the greetings.
message HelloReplyA {
  string message = 1;
}
