syntax = "proto3";

option csharp_namespace = "MicroService.GrpcB";

package greetB;

// The greeting service definition.
service GreeterB {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
